[package]
name = "hiddendoor-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
colored = "2.1.0"
once_cell = "1.19.0"
serde = "1.0.203"
sqlx = { version = "0.7.4", features = ["sqlite", "runtime-tokio-rustls"] }
tokio = { version = "1.38.0", features = ["full"] }
toml = "0.8.14"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dependencies.serenity]
version = "0.12.2"
features = ["gateway", "client", "framework", "standard_framework", "cache", "voice"]

[dependencies.poise]
version = "0.6.1"
features = ["cache"]
